[package]
name = "snippet"
version = "0.1.0"
authors = ["halmk <elle2206@i.softbank.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "^1.0.104"
serde_json = "^1.0.44"
serde_derive = "^1.0.104"
[dependencies.jsonway]
git = "https://github.com/rustless/jsonway"